# sys-hidplus-client-rs

./: .gitignore  2  Cargo.toml  README.md
assets/: gamecontrollerdb.txt
docs/: build.md  issues.md  parsec.md  remote-play.md  setup.md  usage.md
src/: client.rs  config.rs  controller.rs  main.rs  model.rs
src/app/: cli.rs  common.rs  egui.rs  mod.rs
src/app/iced/: application.rs  mod.rs  style.rs  widget.rs
src/input/: mod.rs  switch.rs
src/input/adapter/: common.rs  gilrs.rs  mod.rs  multiinput.rs  sdl.rs
src/view/: cli.rs  common.rs  mod.rs
