[package]
name = "client-rs"
version = "1.1.0-alpha.2"
authors = ["Kenneth <Kenneth@DESKTOP-VHTOUHH>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4"
crossbeam-channel = "0.5"
cute = "0.3"
iced = { version = "0.3", features = ["canvas", "smol", "svg"] }
iced_native = "0.4"
iced_wgpu = "0.4"
sdl2 = "0.34"
serde = { version = "1.0", features = ["derive"] }
structure = "0.1"
strum = "0.21"
strum_macros = "0.21"
svg = "0.10"
tokio = "1.10"
